--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -2,6 +2,23 @@
   color: #007cca;
 }
 
+.bnc-top {
+  top: 0;
+}
+
+.bcn-wide {
+  letter-spacing: 4px;
+}
+
+.bcn-padding-8 {
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+}
+
+.bcn-card-2 {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
+}
+
 .bcn-header {
   width:1200px;
   padding-top:54px;
