--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -38,11 +38,25 @@ body {
   display: block;
 }
 
+.bcn-button {
+  border: none;
+  display: inline-block;
+  vertical-align: middel;
+  padding: 6px 16px;
+  outline: 0;
+  overflow: hidden;
+  text-decoration: none!important;
+  color: #fff;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
 .bcn-bar .bcn-button {
   background-color: inherit;
   color: inherit;
   white-space: normal;
-  
 }
 
 .bcn-white, .bcn-hover-white:hover {
@@ -65,6 +79,10 @@ body {
 
 .bcn-margin-left {
   margin-left: 16px!important;
+}
+
+.bcn-right {
+  float: right!important;
 }
 
 .bcn-header {
