--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -68,9 +68,23 @@ body {
   letter-spacing: 2px;
 }
 
+.bcn-padding {
+  padding: 8px 16px!important;
+}
+
 .bcn-padding-8 {
   padding-top: 8px !important;
   padding-bottom: 8px !important;
+}
+
+.bcn-padding-12 {
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
+}
+
+.bcn-padding-32 {
+  padding-top: 32px !important;
+  padding-bottom: 32px !important;
 }
 
 .bcn-card-2 {
@@ -86,8 +100,9 @@ body {
 }
 
 .bcn-header {
-  width:1200px;
-  padding-top:54px;
+  width:1500px;
+  height: 500px;
+  overflow: hidden;
 }
 
 .bcn-display-container {
@@ -95,13 +110,21 @@ body {
 }
 
 .bcn-content {
-  max-width:980px;
+  position: relative;
+  max-width:1500px;
+  top: 54px;
   margin: auto;
 }
 
-.bcn-image {
-  max-width: 100%;
+.bcn-header .bcn-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
   height: auto;
+  transform: translate(0%,-15%);
 }
 
 .bcn-display-middle {
@@ -115,4 +138,29 @@ body {
   width:100%;
   height:200px;
   background-color:gray;
+}
+
+.bcn-center {
+  text-align: center!important;
+}
+
+.bcn-text-white {
+  color: #fff!important;;
+}
+
+.bcn-back-black {
+  color: #fff!important;
+  background-color: #000!important;
+}
+
+.bcn-opacity-min {
+  opacity: 0.75;
+}
+
+.bcn-container {
+  padding: 0.01em 16px;
+}
+
+.bcn-border-bottom {
+  border-bottom: 1px solid #f1f1f1!important;
 }
