메뉴 버튼에 hover 속성 추가.

--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -67,6 +67,11 @@ body {
   white-space: normal;
 }
 
+.bcn-bar .bcn-button:hover{
+  color: white;
+  background-color: rgba(0, 124, 202, 0.5);
+}
+
 .bcn-white, .bcn-hover-white:hover {
   color: #000!important;
   background-color: #fff!important;
