--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -81,6 +81,25 @@ body {
   letter-spacing: 2px;
 }
 
+.bcn-has-submenu {
+  /*position: relative;
+  display: inline-block;*/
+}
+
+.bcn-submenu-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.bcn-has-submenu:hover .bcn-submenu-content {
+  display: block;
+}
+
 .bcn-padding {
   padding: 8px 16px!important;
 }
