서브 메뉴 위치 조정 중.. #3

--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -82,8 +82,8 @@ body {
 }
 
 .bcn-has-submenu {
-  /*position: relative;
-  display: inline-block;*/
+  position: relative;
+  display: inline-block;
 }
 
 .bcn-submenu-content {
