--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -89,11 +89,16 @@ body {
 .bcn-submenu-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #fff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
+    padding: 12px 16px 15px;
     z-index: 1;
+    top: 38px;
+}
+
+.bcn-submenu-content .bcn-submenu-item {
+  list-style: none;
 }
 
 .bcn-has-submenu:hover .bcn-submenu-content {
