서브메뉴 스타일 수정. #3

--- a/bcn.homepage/WebContent/res/css/bcnstyle.css
+++ b/bcn.homepage/WebContent/res/css/bcnstyle.css
@@ -99,6 +99,9 @@ body {
 
 .bcn-submenu-content .bcn-submenu-item {
   list-style: none;
+  border-bottom: 1px solid #efefef;
+  padding: 10px 0px 10px 5px;
+  font-size: 12px;
 }
 
 .bcn-has-submenu:hover .bcn-submenu-content {
